--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
     </script>
 
     <script>
+        /*
+        TODO: 
+            - 마우스로 상호작용(클릭 - 드래그로 이동 가능)
+            - 확대/축소 구현
+            - 글자 회전?
+            * 각 글자 간 가중치 설정(영단어 리스트로부터 각 알파벳 간의 결합력? 분석)
+            * 뭉쳐진 알파벳들로 단어가 생성 -> 행성     
+            * 항성? 성운? 블랙홀? 등등 아이디어 생각해보기       
+        */
         var letters = [];
         
         class Letter {
